# Guardian

./: .gitignore  CHANGELOG.md  ENHANCEMENT_SUMMARY.md  Gemfile  README.md  blocker.py  dashboard.html  guardian_settings.json  guardian_stats.json  main.py  main.rb  monitor.py  organize.py  pyproject.toml  requirements.txt  utils.py
config/: guardian_settings.json  guardian_stats.json  profiles.json  whitelist.json
data/: weekly_report_20251217_171255.txt
docs/: CHANGELOG.md  CONTRIBUTING.md  FEATURES.md  INSTALL.md
examples/: demo_new_features.py
scripts/: cleanup.py  quick_start.py
src/: advanced_exporter.py  advanced_stats.py  advanced_utilities.py  alert_system.py  daily_goals.py  dashboard.py  gamification.py  import_export.py  ml_analyzer.py  monitor.py  notifications.py  reports.py  scheduler.py  security.py  session_tracker.py  settings_manager.py  smart_alerts.py  utils.py  whitelist.py  window_detector.py  zen_mode.py
src/config/: settings.rb
src/core/: blocker.rb  gamification.rb  monitor.rb  window_detector.py
src/features/: advanced_analytics.py  enhanced_ui.py  reports.py
src/integrations/: api.py  import_export.py
src/security/: __init__.py  whitelist.py
src/utils/: advanced_utilities.py  analytics.rb  config.py  logger.py  logger.rb  settings_manager.py
ui/: main.py  modern_ui.py
